--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         <div class="controls-group">
           <div class="ToolbarGroup">
             <h4>Insert Background</h4>
+            <label for="uploadImage" class="custom-upload-label"
+              >Upload Image <i class="fas fa-upload"></i>
+            </label>
             <input
               type="file"
               id="uploadImage"
@@ -87,156 +90,105 @@
 
             <br />
             <br />
+            <br />
+            <br />
 
             <h4>Line Format</h4>
-            <select id="lineStyle" onchange="setLineStyle(this.value)">
-              <option value="default">Default</option>
-              <option value="thin">Thin Continuous Line</option>
-              <option value="dashed">Dashed Line</option>
-              <option value="thin-dashed">Thin Dashed Line</option>
-              <option value="center">Thin Center Line</option>
-            </select>
+            <div class="custom-dropdown">
+              <select id="lineStyle" onchange="setLineStyle(this.value)">
+                <option value="default">Continous Line</option>
+                <option value="thin">Continuous Line (Thin)</option>
+                <option value="dashed">Dashed Line</option>
+                <option value="thin-dashed">Dashed Line (Thin)</option>
+                <option value="center">Center Line</option>
+              </select>
+            </div>
 
             <br />
             <br />
             <br />
+
             <div id="inputArea">
-              <h4>GD&T</h4>
-              <label for="symbolInput">Symbol: </label>
-              <select id="symbolInput">
-                <option value="⏤">⏤</option>
-                <option value="⏥">⏥</option>
-                <option value="○">○</option>
-                <option value="⌭">⌭</option>
-                <option value="⌒">⌒</option>
-                <option value="⌓">⌓</option>
-                <option value="∠">∠</option>
-                <option value="⟂">⟂</option>
-                <option value="∥">∥</option>
-                <option value="⌖">⌖</option>
-                <option value="◎">◎</option>
-                <option value="⌯">⌯</option>
-                <option value="↗">↗</option>
-                <option value="⌰">⌰</option>
-              </select>
+              <h4>GD&T Feature Control Frame</h4>
+              <div class="gd-t-container">
+                <label for="symbolInput">Symbol: </label>
+                <select id="symbolInput">
+                  <option value="⏤">⏤</option>
+                  <option value="⏥">⏥</option>
+                  <option value="○">○</option>
+                  <option value="⌭">⌭</option>
+                  <option value="⌒">⌒</option>
+                  <option value="⌓">⌓</option>
+                  <option value="∠">∠</option>
+                  <option value="⟂">⟂</option>
+                  <option value="∥">∥</option>
+                  <option value="⌖">⌖</option>
+                  <option value="◎">◎</option>
+                  <option value="⌯">⌯</option>
+                  <option value="↗">↗</option>
+                  <option value="⌰">⌰</option>
+                </select>
 
-              <label for="toleranceInput">Tolerance: </label>
-              <select id="toleranceDiameter">
-                <option value="">No Diameter</option>
-                <option value="Ø">Ø</option>
-              </select>
-              <input
-                type="text"
-                id="toleranceValue"
-                placeholder="Enter value"
-                style="width: 100px"
-              />
-              <select id="toleranceModifier">
-                <option value="">No Modifier</option>
-                <option value="Ⓜ">Ⓜ</option>
-                <option value="Ⓛ">Ⓛ</option>
-              </select>
+                <label for="toleranceInput">Tolerance: </label>
+                <select id="toleranceDiameter">
+                  <option value="">No Diameter</option>
+                  <option value="Ø">Ø</option>
+                </select>
+                <input
+                  type="text"
+                  id="toleranceValue"
+                  placeholder="Enter value"
+                  style="width: 100px"
+                />
+                <select id="toleranceModifier">
+                  <option value="">No Modifier</option>
+                  <option value="Ⓜ">Ⓜ</option>
+                  <option value="Ⓛ">Ⓛ</option>
+                </select>
 
-              <label for="datumInput1">Datum: </label>
-              <input
-                type="text"
-                id="datumInput1"
-                maxlength="1"
-                style="width: 20px"
-              />
-              <input
-                type="text"
-                id="datumInput2"
-                maxlength="1"
-                style="width: 20px"
-              />
-              <input
-                type="text"
-                id="datumInput3"
-                maxlength="1"
-                style="width: 20px"
-              />
+                <label for="datumInput1">Datum: </label>
+                <input
+                  type="text"
+                  id="datumInput1"
+                  maxlength="1"
+                  style="width: 20px"
+                />
+                <input
+                  type="text"
+                  id="datumInput2"
+                  maxlength="1"
+                  style="width: 20px"
+                />
+                <input
+                  type="text"
+                  id="datumInput3"
+                  maxlength="1"
+                  style="width: 20px"
+                />
 
-              <button
-                class="gdtbutton"
-                onclick="drawOnCanvas()"
-                style="
-                  background: #702020;
-                  color: #fff;
-                  border: none;
-                  border-radius: 5px;
-                  margin-left: 18px;
-                  cursor: pointer;
-                  font-size: 14px;
-                  padding: 4px 10px;
-                  height: auto;
-                  width: auto;
-                "
-              >
-                Add
-              </button>
-              <br />
-              <br />
-              <br />
-              <h4>Surface Roughness</h4>
-              <label for="a-value">A: </label>
-              <input
-                type="text"
-                id="toleranceValue"
-                placeholder="Enter value"
-                style="width: 100px"
-              />
-
-              <label for="b-value">B: </label>
-              <input
-                type="text"
-                id="toleranceValue"
-                placeholder="Enter value"
-                style="width: 100px"
-              />
-
-              <label for="c-value">C: </label>
-              <input
-                type="text"
-                id="toleranceValue"
-                placeholder="Enter value"
-                style="width: 100px"
-              />
-
-              <label for="d-value">D: </label>
-              <input
-                type="text"
-                id="toleranceValue"
-                placeholder="Enter value"
-                style="width: 100px"
-              />
-
-              <label for="e-value">E: </label>
-              <input
-                type="text"
-                id="toleranceValue"
-                placeholder="Enter value"
-                style="width: 100px"
-              />
-
-              <button
-                class="gdtbutton"
-                onclick="drawSurfaceRoughness()"
-                style="
-                  background: #702020;
-                  color: #fff;
-                  border: none;
-                  border-radius: 5px;
-                  margin-left: 7px;
-                  cursor: pointer;
-                  font-size: 14px;
-                  padding: 4px 10px;
-                  height: auto;
-                  width: auto;
-                "
-              >
-                Add
-              </button>
+                <button
+                  class="gdtbutton"
+                  onclick="drawOnCanvas()"
+                  style="
+                    background: #702020;
+                    color: #fff;
+                    border: none;
+                    border-radius: 5px;
+                    margin-left: 18px;
+                    margin-bottom: 11px;
+                    cursor: pointer;
+                    font-size: 17px;
+                    padding: 4px 10px;
+                    height: auto;
+                    width: auto;
+                  "
+                >
+                  Add
+                </button>
+                <br />
+                <br />
+                <br />
+              </div>
             </div>
           </div>
         </div>
